--- a/deneme/pubspec.yaml
+++ b/deneme/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   google_fonts: ^2.1.0
   smooth_page_indicator: ^1.0.0+2
   animations: ^2.0.2
+  flutter_clean_architecture: ^5.0.3
+
 
 
 
