--- a/deneme/pubspec.yaml
+++ b/deneme/pubspec.yaml
@@ -43,7 +43,8 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   animations: ^2.0.2
   flutter_clean_architecture: ^5.0.3
-
+  telephony: ^0.2.0
+  otp_text_field: ^1.1.3
 
 
 
